--- a/public/src/html/login.html
+++ b/public/src/html/login.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="required-inputs">
                         <div>
-                            <label for="">State *</label>
+                            <label for="state">State *</label>
                             <input type="text" id="state" required>
                         </div>
                         <div>
@@ -76,11 +76,11 @@
                     </div>
                     <div class="required-inputs">
                         <div>
-                            <label for="phone">Mobile number *</label>
-                            <input type="text" id="phone" required>
+                            <label for="phone-num">Mobile number *</label>
+                            <input type="text" id="phone-num" required>
                         </div>
                     </div>
-                    <button id="create-account">Register</button>
+                    <button id="register-btn">Register</button>
                 </div>
             </form>
             <div id="popup">
