edit to make work with new post reqs

--- a/public/src/html/account.html
+++ b/public/src/html/account.html
@@ -32,9 +32,9 @@
                         <button class="options" id="payment-btn">Payment Method</button>
                         <button class="options" id="reservations-btn">Reservations</button>
                         <button class="options" id="settings-btn">Settings</button>
-                        <a href="login.html">
+                        <!-- <a href="login.html"> -->
                             <button class="options" id="sign-out-btn">Sign out</button>
-                        </a>
+                        <!-- </a> -->
                     </div>
                 </div>
                 <div id="right">
