added autocomplete to username input

--- a/public/src/html/login.html
+++ b/public/src/html/login.html
@@ -93,7 +93,7 @@
                         <div class="column">
                             <h1>Please Sign in</h1>
                             <label for="username">Username</label>
-                            <input type="text" id="username" required>
+                            <input type="text" id="username" autocomplete="username" required>
                             <label for="user-pw">Password</label>
                             <input type="text" id="user-pw" required>
                             <button id="sign-in-button">Sign in</button>
