--- a/public/src/html/login.html
+++ b/public/src/html/login.html
@@ -27,11 +27,11 @@
                     <div class="required-inputs">
                         <div>
                             <label for="first-name">First name *</label>
-                            <input type="text" id="first-name" required>
+                            <input type="text" id="first-name" pattern="[A-za-z]+" required>
                         </div>
                         <div>
                             <label for="last-name">Last name *</label>
-                            <input type="text" id="last-name" required>
+                            <input type="text" id="last-name" pattern="[A-za-z]+" required>
                         </div>
                     </div>
                     <div class="required-inputs">
@@ -61,17 +61,17 @@
                         </div>
                         <div>
                             <label for="phone-num">Mobile number *</label>
-                            <input type="text" id="phone-num" required>
+                            <input type="text" id="phone-num" minlength="10" maxlength="10" pattern="[0-9]+" required>
                         </div>
                     </div>
                     <div class="required-inputs">
                         <div>
                             <label for="state">State *</label>
-                            <input type="text" id="state" required>
+                            <input type="text" id="state" pattern="[A-za-z]+" required>
                         </div>
                         <div>
                             <label for="city">City/Town *</label>
-                            <input type="text" id="city" required>
+                            <input type="text" id="city" pattern="[A-za-z]+" required>
                         </div>
                     </div>
                     <div class="required-inputs">
@@ -81,7 +81,7 @@
                         </div>
                         <div>
                             <label for="code">Postal code *</label>
-                            <input type="text" id="code" required>
+                            <input type="text" id="code" minlength="5" maxlength="12" pattern="[0-9]+"required>
                         </div>
                     </div>
                     <button id="register-btn">Register</button>
@@ -95,7 +95,7 @@
                             <label for="username">Username</label>
                             <input type="text" id="username" autocomplete="username" required>
                             <label for="user-pw">Password</label>
-                            <input type="text" id="user-pw" required>
+                            <input type="password" id="user-pw" required>
                             <button id="sign-in-button">Sign in</button>
                             <p>Not a member? <a href="login.html">Sign Up</a></p>
                         </div>
