--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poiret One">
         <link rel="stylesheet" href="src/css/styles.css">
         <script src="src/js/index.js"></script>
+        <script src="src/js/load.js"></script>
         <title>Overlook Hotel</title>
     </head>
     <body>
