--- a/public/src/html/amenities.html
+++ b/public/src/html/amenities.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="../css/styles.css">
         <link rel="stylesheet" href="../css/amenities.css">
         <script src="/public/src/js/amenities.js"></script>
+        <script src="/public/src/js/load.js"></script>
         <title>Amenities</title>
     </head>
     <body>
