--- a/public/src/html/dinning.html
+++ b/public/src/html/dinning.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="../css/styles.css">
         <link rel="stylesheet" href="../css/dinning.css">
         <script src="/public/src/js/dinning.js"></script>
+        <script src="/public/src/js/load.js"></script>
         <title>Dinning</title>
     </head>
     <body>
