--- a/public/src/html/rooms.html
+++ b/public/src/html/rooms.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="../css/styles.css">
         <link rel="stylesheet" href="../css/rooms.css">
         <script src="/public/src/js/rooms.js"></script>
+        <script src="/public/src/js/load.js"></script>
         <title>Rooms</title>
     </head>
     <body>
