removed duplicate id

--- a/public/src/html/login.html
+++ b/public/src/html/login.html
@@ -18,8 +18,8 @@
             </a>
             <section id="navigation">
                 <nav id="nav1">
-                    <ul id="login">
-                        <li><a id="link1" href="">Login</a></li>
+                    <ul>
+                        <li><p id="login-btn">Login</p></li>
                         <li><a id="nullLink" href="">|</a></li>
                         <li><a id="link2" href="login.html">Join</a></li>
                     </ul>
