Upcoming Reservations now displayed

--- a/public/src/html/account.html
+++ b/public/src/html/account.html
@@ -85,8 +85,8 @@
                                     <button class="filter" id="current-btn">Upcoming</button>
                                     <button class="filter" id="previous-btn">Previous</button>
                                 </div>
-                                <div class="reservation-display" id="upcoming"></div>
-                                <div class="reservation-display" id="previous"></div>
+                                <div class="reservation-display" id="upcoming">
+                                </div>
                             </div>
                         </div>
                     </div>
