--- a/public/src/html/booking.html
+++ b/public/src/html/booking.html
@@ -8,15 +8,15 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poiret One">
         <link rel="stylesheet" href="../css/styles.css">
         <link rel="stylesheet" href="../css/booking.css">
-        <script src="/public/src/js/booking.js"></script>
-        <script src="/public/src/js/load.js"></script>
-        <script src="/public/src/js/filterbtns.js"></script>
+        <script src="../js/booking.js"></script>
+        <script src="../js/load.js"></script>
+        <script src="../js/filterbtns.js"></script>
         <title>Booking</title>
     </head>
     <body>
         <header>
             <a id="logo-box" href="../../index.html">
-                <img id="logo" src="/public/assets/img/overlook-logo.png" alt="overlook-logo">
+                <img id="logo" src="../../assets/img/overlook-logo.png" alt="overlook-logo">
                 <p>Overlook Hotel</p>
             </a>
             <section id="navigation">
@@ -256,9 +256,9 @@
                         <section id="sign-in">
                             <form id="login-form">
                                 <label for="username">Username</label>
-                                <input type="text" id="username" name="user" required>
+                                <input type="text" id="username" name="username" required>
                                 <label for="password">Password</label>
-                                <input type="password" id="password" name="code" required>
+                                <input type="password" id="password" name="password" required>
                                 <button id="login-btn" type="submit">Confirm</button>
                                 <section id="login-msg">
                                     <p>click <a href="">here</a> to create an account</p>
