--- a/public/src/html/rooms.html
+++ b/public/src/html/rooms.html
@@ -8,15 +8,15 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poiret One">
         <link rel="stylesheet" href="../css/styles.css">
         <link rel="stylesheet" href="../css/rooms.css">
-        <script src="/public/src/js/rooms.js"></script>
-        <script src="/public/src/js/load.js"></script>
-        <script src="/public/src/js/filterbtns.js"></script>
+        <script src="../js/rooms.js"></script>
+        <script src="../js/load.js"></script>
+        <script src="../js/filterbtns.js"></script>
         <title>Rooms</title>
     </head>
     <body>
         <header>
             <a id="logo-box" href="../../index.html">
-                <img id="logo" src="/public/assets/img/overlook-logo.png" alt="overlook-logo">
+                <img id="logo" src="../../assets/img/overlook-logo.png" alt="overlook-logo">
                 <p>Overlook Hotel</p>
             </a>
             <section id="navigation">
@@ -70,7 +70,7 @@
                 </section>
             </section>
             <section id="intro">
-                <img id="intro-img" src="/public/assets/img/hallway.jpg" alt="hallway">
+                <img id="intro-img" src="../../assets/img/hallway.jpg" alt="hallway">
             </section>
             <section id="rooms-title">
                 <hr><h2>Explore Rooms</h2><hr>
