--- a/public/src/html/amenities.html
+++ b/public/src/html/amenities.html
@@ -8,14 +8,14 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poiret One">
         <link rel="stylesheet" href="../css/styles.css">
         <link rel="stylesheet" href="../css/amenities.css">
-        <script src="/public/src/js/amenities.js"></script>
-        <script src="/public/src/js/load.js"></script>
+        <script src="../js/amenities.js"></script>
+        <script src="../js/load.js"></script>
         <title>Amenities</title>
     </head>
     <body>
         <header>
             <a id="logo-box" href="../../index.html">
-                <img id="logo" src="/public/assets/img/overlook-logo.png" alt="overlook-logo">
+                <img id="logo" src="../../assets/img/overlook-logo.png" alt="overlook-logo">
                 <p>Overlook Hotel</p>
             </a>
             <section id="navigation">
@@ -69,7 +69,7 @@
                 </section>
             </section>
             <section id="intro">
-                <img id="intro-img" src="/public/assets/img/maze2.jpg" alt="hallway">
+                <img id="intro-img" src="../../assets/img/maze2.jpg" alt="hallway">
             </section>
             <section id="grounds-title">
                 <hr><h2>About The Overlook Maze</h2><hr>
